# MusicPlayer

./: CMakeLists.txt  README.md  main.cpp  unitTestMain.cpp
CLI_UI/: BarGraph.cpp  BarGraph.h  Button.cpp  Button.h  CLI_UI.cpp  CLI_UI.h  TextField.h  Types.cpp  Types.h  ValueField.h  libTestMain.cpp
MusicPlayer/: CLI_Interface.cpp  CLI_Interface.h  MusicPlayer.cpp  MusicPlayer.h
SoundBasis/: Adapter.cpp  Adapter.h  Buffer.cpp  Buffer.h  Exceptions.h  FourrierTransform.cpp  FourrierTransform.h  Types.h
SoundDevice/: ALSA_PlayDevice.cpp  ALSA_PlayDevice.h  BasePlayDevice.cpp  BasePlayDevice.h  PlaybackDevice.h
SoundFiles/: WaveFile.cpp  WaveFile.h
